swim_common/src/form/tests/derive/validated_form/generic_no_default.stderr
error[E0599]: the method `as_value` exists for struct `S<main::Invalid>`, but its trait bounds were not satisfied
  --> $DIR/generic_no_default.rs:29:37
   |
19 |     struct Invalid;
   |     --------------- doesn't satisfy `main::Invalid: Default`
...
23 |     struct S<F> {
   |     -----------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<main::Invalid>: Form`
...
29 |     let _s = S { a: 1, f: Invalid }.as_value();
   |                                     ^^^^^^^^ method cannot be called on `S<main::Invalid>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `main::Invalid: Default`
           which is required by `S<main::Invalid>: Form`
